--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    <h1 id="titulo">INSCRIBITE AL PASO TIMBOY!!</h1>
+    <form id="formulario">
+        Nombre: <input type="text" name="nombre" id="nombre">
+        Apellido: <input type="text" name="apellido" id="apellido">
+        DNI: <input type="number" name="dni" id="dni">
+        Edad: <input type="number" name="edad" id="edad">
+        Sexo: <input type="text" name="sexo" id="sexo">
+        Kilometraje: <input type="text" name="kilometraje" id="kilometraje">
+        <input type="submit" value="REGISTRAR" id="miBoton">
+    </form>
     <script src="index.js"></script>
 </body>
 </html>
